@@ -1,3 +1,10 @@
+2007-09-17  Francois Dumont  <dums@users.sourceforge.net>
+
+	* stlport/stl/_num_get.h: Add _STLP_DECLSPEC specification to
+	several functions that might be access by external code when
+	num_get facet is instantiated with something else than the
+	Standard required instantiation.
+
 2007-09-11  Francois Dumont  <dums@users.sourceforge.net>
 
 	* src/c_locale_glibc/c_locale_glibc.c, c_locale_glibc2.c: Fix
